@@ -10,6 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>Towelove-Auth</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>18</source>
+                    <target>18</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
@@ -68,5 +81,15 @@
             <artifactId>Towelove-Framework-Redis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>blossom.project</groupId>
+            <artifactId>Towelove-Framework-Log</artifactId>
+        </dependency>
+
+        <!--   引入公共类     -->
+        <dependency>
+            <groupId>blossom.project</groupId>
+            <artifactId>Towelove-Common</artifactId>
+        </dependency>
     </dependencies>
 </project>
